RESOLVED FIXED199643
Fix integer type encoding / decoding in WKRemoteObjectCoder
https://bugs.webkit.org/show_bug.cgi?id=199643
Summary Fix integer type encoding / decoding in WKRemoteObjectCoder
Chris Dumez
Reported 2019-07-09 15:07:41 PDT
Fix integer type encoding / decoding in WKRemoteObjectCoder.
Attachments
Patch (9.02 KB, patch)
2019-07-09 15:10 PDT, Chris Dumez
no flags
Patch (9.03 KB, patch)
2019-07-09 15:25 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-07-09 15:07:56 PDT
Chris Dumez
Comment 2 2019-07-09 15:10:20 PDT
Chris Dumez
Comment 3 2019-07-09 15:25:51 PDT
WebKit Commit Bot
Comment 4 2019-07-09 17:13:07 PDT
Comment on attachment 373781 [details] Patch Clearing flags on attachment: 373781 Committed r247288: <https://trac.webkit.org/changeset/247288>
WebKit Commit Bot
Comment 5 2019-07-09 17:13:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.