Fix integer type encoding / decoding in WKRemoteObjectCoder https://bugs.webkit.org/show_bug.cgi?id=199643 <rdar://problem/52732342>

Reviewed by Anders Carlsson.

Source/WebKit:

As per [1], q / Q match to long long / unsigned long long, not long / unsigned long.

[1] https://developer.apple.com/library/archive/documentation/Cocoa/Conceptual/ObjCRuntimeGuide/Articles/ocrtTypeEncodings.html#//apple_ref/doc/uid/TP40008048-CH100

* Shared/API/Cocoa/WKRemoteObjectCoder.mm:
(encodeInvocationArguments):
(decodeInvocationArguments):

Tools:

Update API test coverage.

* TestWebKitAPI/Tests/WebKitCocoa/RemoteObjectRegistry.h:
* TestWebKitAPI/Tests/WebKitCocoa/RemoteObjectRegistry.mm:
(TEST):
* TestWebKitAPI/Tests/WebKitCocoa/RemoteObjectRegistryPlugIn.mm:
(-[RemoteObjectRegistryPlugIn takeUnsignedLongLong:completionHandler:]):
(-[RemoteObjectRegistryPlugIn takeLongLong:completionHandler:]):
(-[RemoteObjectRegistryPlugIn takeUnsignedLong:completionHandler:]):
(-[RemoteObjectRegistryPlugIn takeLong:completionHandler:]):


Canonical link: https://commits.webkit.org/213535@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247288 268f45cc-cd09-0410-ab3c-d52691b4dbfc